2012-08-06  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingwex/membarrier.c: New file.
	* mingwex/Makefile.in (DISTFILES): Add membarrier.c.
	(REPLACE_OBJS): Add membarrier.o.

2012-08-02  Ivan Maidanski  <ivmai@users.sourceforge.net>

	* include/process.h (_wexec*, _wspawn*): Declare.

2012-08-02  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/stdlib.h (_strtoi64): Declare.
	(_strtoi64_l): Ditto.
	(_strtoui64): Ditto.
	(_strtoui64_l): Ditto.
	(_wcstrtoi64): Ditto.
	(_wcstrtoi64_l): Ditto.
	(_wcstrtoui64): Ditto.
	(_wcstrtoui64_l): Ditto.
	* include/wchar.h (_wcstrtoi64): Ditto.
	(_wcstrtoi64_l): Ditto.
	(_wcstrtoui64): Ditto.
	(_wcstrtoui64_l): Ditto.
	* include/stdio.h (_getws, _putws): Guard with #ifndef __STRICT_ANSI__.
	(_wfdopen, _wfopen, _wfreopen, _wfsopen, _wtmpnam, _wtempnam): Ditto.
	(_wrename, _wremove, _wperror, _wpopen): Ditto.
	(_lock_file, _unlock_file): Declare.
	* include/limits.h (PATH_MAX): Guard with #ifndef __STRICT_ANSI__.
	* include/sys/param.h (MAXPATHLEN): Make sure PATH_MAX is defined.
	* include/_mingw.h (threadlocalinfostruct, threadmbinfostruct,
	*pthreadlocinfo, *pthreadmbcinfo, _locale_tstruct, *_locale_t): Declare.
	* mingwex/tsearch.c: Correct coding to produce the proper results.

2012-08-01  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/excpt.h (__try1): Define based on _WIN64 definition.
	(__except1): Ditto.

2012-07-30  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/stdint.h: Include _mingw.h for the definition of __int64 when
	_WIN64 is defined.
	* include/inttypes.h: A few items like PRNdPTR and SCNdPTR need 64
	bitness specified when _WIN64 is defined.
	* include/_mingw.h: Add __MINGW_VERSION, __MINGW_MAJOR_VERSION,
	__MINGW_MINOR_VERSION and __MINGW_PATCHLEVEL deprecating the __MINGW32_*
	versions of the macros.
	* configure.in: Use __MINGW_VERSION instead of __MINGW32_VERSION.
	* configure: Ditto.

2012-05-08  Keith Marshall  <keithmarshall@users.sourceforge.net>
