@@ -1,3 +1,7 @@
+2012-08-08  Kai Tietz  <ktietz@redhat.com>
+
+	* mingwex/gdtoa/gd_qnan.h: Make Nan constants positive valued.
+
 2012-08-06  Earnie Boyd  <earnie@users.sourceforge.net>
 
 	* mingwex/membarrier.c: New file.
